--- a/src/components/select/Select.module.scss
+++ b/src/components/select/Select.module.scss
@@ -44,7 +44,12 @@
 
 .selectWrapper:not([data-is-active='true'])
 	.placeholder:not([data-status='invalid']):hover {
-	outline: 3px solid #000000;
+	outline: 1px solid #ffc802;
+}
+
+.selectWrapper:not([data-is-active='true'])
+	.placeholder:not([data-status='invalid']):active {
+	outline: 3px solid black;
 }
 
 .select {
@@ -78,7 +83,11 @@
 }
 
 .option:hover {
-	background: var(--grey, #c4c4c4);
+	background: #eeeeee;
+}
+
+.option:active {
+	background: #d7d7d7;
 }
 
 @mixin option-color-before {
