--- a/src/components/article-params-form/ArticleParamsForm.module.scss
+++ b/src/components/article-params-form/ArticleParamsForm.module.scss
@@ -6,6 +6,8 @@
 	overflow: scroll;
 	transform: translate(-616px);
 	transition: transform 0.5s ease;
+	overflow-x: hidden;
+	overflow-y: hidden; // небольшой декоративный апгрейд, надеюсь не будете ругать)
 }
 
 .container_open {
@@ -23,6 +25,11 @@
 	padding: 50px 31px;
 	background-color: #ffffff;
 	border-right: 1px solid #000000;
+	gap: 50px;
+	text-transform: uppercase;
+	font-weight: 800;
+	font-size: 1.125em;
+	line-height: 233.33%;
 }
 
 .bottomContainer {
